src/index.css
/* ... */
/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-weight: 400;
}

a {
  text-decoration: none;
}

/* set up the body */
body {
  font-family: var(--ff-serif);
  font-size: var(--fs-400);
  color: hsl(var(--clr-white));
  line-height: 1.5;
  background-color: rgb(243, 243, 243);
  min-height: 100vh;
}

.partial-wrap {
  max-width: 1500px;
  margin: 0 auto;
}

/* make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* make form elements easier to work with */
input,
button,
textarea,
select {
  font: inherit;
}

/* remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* cursor for all buttons */
button {
  cursor: pointer;
}

/* ------------------- */
/* Utility classes     */
/* ------------------- */

.flex {
  display: flex;
}

.list-styles {
  list-style-type: none;
  padding: 0px;
}

.gray {
  color: hsl(var(--gray));
  transition: color 300ms ease-in;
}

.gray:hover {
  color: hsl(var(--gray), .5);
}

.footer-link span {
  display: block;
  margin-bottom: 1.5rem;
}

.list-margin li {
  margin-bottom: 1rem;
}

.list-margin li:last-child {
  margin-bottom: 2rem;
}

.btn-colors {
  border-color: transparent;
  background-color: hsl(var(--cyan));
  color: white;
  font-weight: 700;
  transition: background-color 300ms ease-in;
}

.btn-colors:hover {
  background-color: hsl( var(--cyan), .5);
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  /* added line */
  border: 0;
}

/* ------------------- */
/* Header classes      */
/* ------------------- */
header {
  background-color: white;
}

.desktop-nav {
  display: none;
}

/* nav toggle */
.menu-container {
  background-color: transparent;
  border: none;
  transition: all 0.5s linear;
  padding: 0px;
}

.menu-container.close .top-bar {
  transform: translateY(11px) rotate(45deg);
}

.menu-container.close .middle-bar {
  transform: rotate(45deg);
  opacity: 0;
}

.menu-container.close .bottom-bar {
  transform: translateY(-11px) rotate(-45deg);
}

/* mobile nav */

.mobile-nav {
  padding-block: 2.5rem;
  padding-inline: 2rem;
}

.nav-container {
  align-items: center;
  justify-content: space-between;
}

.top-bar,
.middle-bar,
.bottom-bar {
  width: 30px;
  height: 3px;
  margin-bottom: 8px;
  background-color: hsl(var(--gray));
  transition: all 0.3s linear;
}

.mobile-dropdown {
  position: absolute;
  z-index: 900;
  width: 83%;
  top: -100%;
  left: 2rem;

  transition: top 300ms ease-in-out;

  flex-direction: column;
  align-items: center;
  background-color: hsl(var(--dark-violet));
  border-radius: 0.7rem;
  padding-block: 2rem;
}

.mobile-dropdown.open {
  top: 15%;
}

.mobile-links {
  margin-top: 0px;
  padding-bottom: 2rem;
  position: relative;
}

.mobile-links::after {
  position: absolute;
  bottom: 0;
  left: -100%;
  content: '';
  height: 1px;
  width: 300%;
  background-color: hsl(var(--gray));
}

.mobile-links li {
  text-align: center;
}

.mobile-links li:not(:last-child) {
  margin-bottom: 1.5rem;
}

.mobile-links a {
  color: white;
  font-weight: 700;
}

.account-btns {
  flex-direction: column;
  align-items: center;
  margin-top: 1rem;
}

.account-btns .login {
  background-color: transparent;
  color: white;
  border-color: transparent;
  margin-bottom: 1rem;
  font-weight: 700;
}

.account-btns .sign-up {
  border-radius: 25px;
  padding: 0.5rem 6rem;
}

@media (min-width: 1050px) {
  .mobile-nav {
    display: none;
  }

  .desktop-nav {
    display: flex;
    align-items: center;
    padding: 2.5rem 2rem;
  }

  .desktop-nav img {
    margin-right: clamp(2rem, 3.5vw, 3.5rem);
  }

  .desktop-nav ul {
    gap: clamp(2rem, 3.5vw, 3.5rem);
  }

  .desktop-nav ul li a {
    color: hsl(var(--grayish-violet));
    transition: color 300ms ease-in;
  }

  .desktop-nav ul li a:hover {
    color: hsl(var(--gray));
  }

  .account-btns {
    margin-top: 0;
    margin-left: auto;
  }

  .account-btns .login {
    color: hsl(var(--gray));
    margin-bottom: 0rem;
    margin-right: clamp(1rem, 2vw, 2rem);
    transition: color 300ms ease-in;
  }

  .account-btns .login:hover {
    color: hsl(var(--grayish-violet));
  }

  .account-btns .sign-up {
    padding: 0.5rem 3rem;
  }

}

/* ------------------- */
/* Main classes        */
/* ------------------- */

.main-section {
  display: grid;
  grid-template-areas: 
            "img"
            "info";
  gap: 2rem;
  margin-bottom: 5rem;
  background-color: white;
  position: relative;
}

.main-section::after {
  content: '';
  z-index: -999;
  position: absolute;
  width: 100%;
  height: 30rem;
  bottom: -33%;
  left: 0;
  background-color: white;
}

.main-info {
  grid-area: info;
  text-align: center;
}

.main-info h1 {
  font-weight: 700;
  font-size: var(--fs-700);
  line-height: 1.2;
  margin-bottom: 1rem;
}

.main-info p {
  font-size: var(--fs-600);
  color: hsl(var(--grayish-violet));
  max-width: 30ch;
  margin: 0 auto 2rem auto;
}

.main-info .get-started {
  padding: 0.8rem 3rem;
  border-radius: 25px;
}

.main-img {
  grid-area: img;
  padding-left: 2rem;
}

@media (min-width: 800px) {
  .main-section::after {
    height: 30rem;
    bottom: -22%;
  }
}

@media (min-width: 1050px) {
  .main-section {
    grid-template-areas:
              "info img"
              "info img";
    grid-template-columns: 1fr 1fr;
    padding-inline: 2rem;
    margin-top: 3rem;
  }

  .main-section::after {
    height: 50rem;
    bottom: -42%;
  }

  .main-img {
    height: 100%;
  }

  .main-info {
    text-align: left;
  }

  .main-info p {
    max-width: 40ch;
    margin-left: 0;
  }

}
/* ... */

